# vela

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  README.md  RESUMEN_DE_CAMBIOS.md  SPRINT_VALIDATION_REPORT.md  VALIDATION_REPORT.md  WEBSITE_INFRASTRUCTURE.md  build_ffi_test_lib.sh  observability_decorators.d  pr-vela-567.md  simple_test.vela  sprint-0-19-gaps-analysis.md  sprint-9-decorator-parsing-completed.md  tasks-no-implementadas-validacion.csv  tasks-no-implementadas.csv  tasks-realmente-no-implementadas.csv  temp_widget.rs  test_debug.vela  test_format.vela  test_interpolation_quick.py  test_module.vela  test_program.vela  test_program.velac  vela-development-prompt-complete.md  vela-roadmap-scrum-updated.csv  vela-roadmap-scrum-validation.csv  vela-roadmap-scrum.csv  vela.yaml
cli/: Cargo.toml
cli/src/: main.rs  test_cli_doctor.rs  test_cli_fmt.rs  test_cli_run.rs
compiler/: Cargo.toml  config-dev.json  config.json  db-config.json  large-config.json
compiler/benches/: codegen_benchmark.rs  lexer_benchmark.rs  parser_benchmark.rs
compiler/js_codegen/: backend_tests.rs  codegen.rs  codegen_correctness_tests.rs  dom_renderer.rs  dom_renderer_tests.rs  end_to_end_tests.rs  expressions.rs  generator.rs  lib.rs  mod.rs  reactive_tests.rs  runtime.rs  runtime_integration_tests.rs  statements.rs  tests.rs  types.rs
compiler/src/: advanced_pattern_matching_tests.rs  ast.rs  auth.rs  bytecode.rs  codegen.rs  config.rs  config_decorator_tests.rs  config_decorators.rs  config_integration_tests.rs  config_loader.rs  config_tests.rs  debug_info.rs  debug_info_tests.rs  dynamic_router.rs  error.rs  gateway.rs  gateway_decorator_tests.rs  gateway_decorators.rs  gateway_tests.rs  grpc_decorator_tests.rs  grpc_decorators.rs  hot_reload.rs  hot_reload_tests.rs  json_decorators.rs  lambda_patterns_test.rs  lexer.rs  lib.rs  load_balancer.rs  message_broker_decorators.rs  metrics.rs  observability_decorators.rs  orm_decorators.rs  parser.rs  plugins.rs  rate_limiter.rs  resilience_decorators.rs  router.rs  semantic.rs  serialization_decorators.rs  serialization_tests.rs  (+1 more)
compiler/src/codegen/: ast_to_ir.d  ast_to_ir.rs  ir_to_bytecode.rs  ir_to_llvm.rs  ir_to_wasm.rs  js_wasm_glue.rs  js_wasm_glue_tests.rs  linking.rs  llvm_generator_tests.rs  main.rs  mod.rs  wasm_generator_tests.rs
compiler/src/ir/: mod.rs
compiler/src/tests/: mod.rs  test_codegen_pipeline.rs
compiler/src/types/: compounds.rs  functions.rs  generics.rs  mod.rs  primitives.rs  special.rs  unification.rs
compiler/tests/: backend.rs  codegen_correctness.rs  dom_renderer.rs  end_to_end.rs  reactive.rs
compiler/tests/unit/: test_ast.rs  test_message_broker_decorators.rs  test_types.rs
concurrency/: Cargo.toml
concurrency/src/: lib.rs
concurrency/src/actors/: address.rs  context.rs  supervisor.rs
concurrency/src/channels/: mpsc.rs
concurrency/src/pools/: async_pool.rs  mod.rs
devtools/: Cargo.toml  python_baseline.py
devtools/src/: lib.rs
i18n/: Cargo.toml
i18n/src/: decorator.rs  error.rs  formatter.rs  hot_reload.rs  interpolator.rs  lib.rs  loader.rs  locale.rs  pluralization.rs  translator.rs
i18n/translations/: en.json  es.json  pt.json
lsp/: Cargo.toml
lsp/src/: handlers.rs  lib.rs  server.rs
package/: Cargo.toml
package/src/: lib.rs  manifest.rs  registry.rs  resolver.rs
reactive/: Cargo.toml  README.md
reactive/examples/: basic_reactive.rs
reactive/src/: batch.rs  computed.rs  effect.rs  graph.rs  scheduler.rs  signal.rs  watch.rs
runtime/: CMakeLists.txt  Cargo.toml  README.md
runtime/android/: Cargo.toml  build.gradle.kts
runtime/benches/: runtime_bench.rs
runtime/concurrency/: README.md
runtime/desktop/: Cargo.toml  build.rs
runtime/desktop/cpp/: DesktopRenderEngine.cpp  EventBuffer.cpp  EventBuffer.h  FileSystem.cpp  PlatformLinux.cpp  PlatformMacOS.cpp  PlatformMacOS.h  PlatformWindows.h  SystemInfo.cpp  SystemInfo.h
runtime/desktop/src/: bridge.rs  renderer.rs  system_apis.rs
runtime/docs/: HTTP_FRAMEWORK.md
runtime/include/: actors.h  gc.h  signals.h  vela_runtime.h
runtime/reactive/benches/: reactive_bench.rs
runtime/reactive/src/: computed.rs  effect.rs  lib.rs  signal.rs  watch.rs
runtime/src/: action.rs  actors.c  ffi.rs  gc.c  lib.rs  reducer.rs  resilience.rs  runtime.c  signals.c  store.rs  streams.rs  worker_pool.rs
runtime/src/async/: mod.rs
runtime/src/async_runtime/: mod.rs
runtime/src/di/: mod.rs  (+3 more)
runtime/tests/: async_iterators_tests.rs  async_runtime.rs  basic.rs  channels.rs  correctness_tests.rs  di.rs  event.rs  ffi_integration_tests.rs  ffi_performance_tests.rs  ffi_security_tests.rs  ffi_unit_tests.rs  integration_tests.rs  performance_tests.rs  streams.rs  stress_tests.rs
runtime/ui/: Cargo.toml
src/prototypes/: Cargo.toml  lexer.rs  lib.rs  parser.rs
stdlib/: Cargo.toml  README.md  test.vela
stdlib/benches/: stdlib_benchmark.rs
stdlib/src/: lib.rs
stdlib/tests/: integration.rs  io_networking_integration.rs
tooling/: Cargo.toml  README.md
tooling/cli/: Cargo.toml  test.vela  test_fmt.vela
tooling/devtools/: run_benchmarks.py
tooling/src/: dap.rs  lib.rs  lsp.rs
tooling/tests/: package_manager_tests.rs
types/: Cargo.toml
types/benches/: type_system_benches.rs
types/src/: checker.rs  inference.rs  lib.rs
types/tests/: integration_tests.rs  type_checker_tests.rs
vm/: Cargo.toml  README.md  arc.vela  bytecode_generator.vela  bytecode_loader.vela  exceptions.vela  heap.vela  module_loader.vela  opcodes.vela  reactive.vela  velavm.vela  weak.vela
vm/benches/: gc_benchmark.rs  sprint10_benchmarks.rs  vm_benchmark.rs
vm/src/: bytecode.rs  error.rs  gc.rs  lib.rs  loader.rs  module_resolver.rs  profiler.rs  vm.rs
vm/tests/: bytecode_correctness_tests.rs  bytecode_tests.rs  gc_integration_tests.rs  gc_tests.rs  integration_new.rs  integration_tests.rs  memory_management_tests.rs  module_system_tests.rs  performance_tests.rs  sprint10_e2e_tests.rs  sprint10_integration_tests.rs  vm_execution_tests.rs  vm_tests.rs
(+1366 files in other folders)
