[workspace]
resolver = "2"
members = [
    "crates/vela-compiler",
    "crates/vela-parser",
    "crates/vela-ast",
    "crates/vela-codegen",
    "crates/vela-runtime",
    "crates/vela-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Vela Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/velalang/vela"
homepage = "https://velalang.github.io/vela/"
documentation = "https://docs.rs/vela"

[workspace.dependencies]
# Internal crates
vela-ast = { path = "crates/vela-ast" }
vela-parser = { path = "crates/vela-parser" }
vela-codegen = { path = "crates/vela-codegen" }
vela-runtime = { path = "crates/vela-runtime" }

# External dependencies
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
