[workspace]
resolver = "2"
members = [
    "compiler",
    "vm",
    "stdlib",
    "packages/lsp",
    "packages/devtools",
    "runtime",
    "packages/ui",
    "tooling",
    "packages/package",
    "packages/logging",
    "packages/i18n",
    "packages/validation",
    "packages/concurrency",
    "packages/http",
    "packages/reactive",
    "packages/events",
    "packages/di",
    "packages/pipe-decorators",
    "packages/test-decorators",
    "packages/state-management",
    "packages/service-discovery",
    "packages/message-brokers",
    "packages/orm",
    "packages/crypto",
    "bin",
]
exclude = [
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Vela Core Team <hello@velalang.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/velalang/vela"
homepage = "https://velalang.org"
documentation = "https://docs.velalang.org"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }
notify = "6.1"
lazy_static = "1.4"

# Testing and benchmarking
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
lto = "fat"
