[package]
name = "vela-cli"
version = "0.1.0"
edition = "2021"
description = "Vela CLI tool"
authors = ["Vela Core Team <hello@velalang.org>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/velalang/vela"
homepage = "https://velalang.org"
documentation = "https://docs.velalang.org"

[[bin]]
name = "vela"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
walkdir = "2.0"
regex = "1.10"
dirs = "5.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
vela-vm = { path = "../vm" }
vela-compiler = { path = "../compiler" }
vela-package = { path = "../package" }
vela-lsp = { path = "../lsp" }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.0"
tracing.workspace = true
tracing-subscriber.workspace = true
# vela-compiler = { path = "../compiler" }  # TODO: Re-enable when compiler API stabilizes
assert_cmd = "2.0"
predicates = "3.0"