[package]
name = "vela-compiler"
version = "0.1.0"
edition = "2021"
description = "Vela compiler - lexer, parser, semantic analyzer, and code generator"
authors = ["Vela Core Team <hello@velalang.org>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/velalang/vela"
homepage = "https://velalang.org"
documentation = "https://docs.velalang.org"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
nom = "7.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.16"
vela-vm = { path = "../vm" }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = []
debug_ast = []
debug_lexer = []
debug_parser = []
debug_codegen = []
performance = ["debug_lexer", "debug_parser", "debug_codegen"]

[[bench]]
name = "lexer_benchmark"
harness = false

[[bench]]
name = "parser_benchmark"
harness = false

[[bench]]
name = "codegen_benchmark"
harness = false