[package]
name = "vela-compiler"
version = "0.1.0"
edition = "2021"
description = "Vela compiler - lexer, parser, semantic analyzer, and code generator"
authors = ["Vela Core Team <hello@velalang.org>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/velalang/vela"
homepage = "https://velalang.org"
documentation = "https://docs.velalang.org"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
nom = "7.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.16"
vela-vm = { path = "../vm" }
quote = "1.0"
proc-macro2 = "1.0"
bincode = "1.3"
async-trait = "0.1"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
notify = "6.1"
tempfile = "3.8"
futures = "0.3"
reqwest = { version = "0.12.25", features = ["json"] }
prost-build = "0.12"
tonic-build = "0.11"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = []
debug_ast = []
debug_lexer = []
debug_parser = []
debug_codegen = []
performance = ["debug_lexer", "debug_parser", "debug_codegen"]

[[bench]]
name = "lexer_benchmark"
harness = false

[[bench]]
name = "parser_benchmark"
harness = false

[[bench]]
name = "codegen_benchmark"
harness = false
