[package]
name = "vela-i18n"
version = "0.1.0"
edition = "2021"
description = "Internationalization (i18n) system for Vela programming language"
authors = ["Vela Team <team@velalang.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/velalang/vela"
keywords = ["i18n", "internationalization", "localization", "vela"]
categories = ["internationalization", "localization"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["fs", "sync", "rt", "macros", "rt-multi-thread", "time"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
unic-langid = "0.9"
fluent-langneg = "0.13"
intl_pluralrules = "7.0"
intl-memoizer = "0.5"
unic-ucd-category = "0.9"
rust_decimal = "1.35"
num-format = "0.4"
icu_locid = "1.5"
icu_datetime = "1.5"
icu_decimal = "1.5"
icu_plurals = "1.5"
icu_calendar = "1.5"
icu_collator = "1.5"
icu_list = "1.5"
icu_casemap = "1.5"
icu_provider = "1.5"
fixed_decimal = "0.5"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"