[package]
name = "vela-lsp"
version = "0.1.0"
edition = "2021"
description = "Vela Language Server Protocol implementation"
authors = ["Vela Core Team <hello@velalang.org>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/velalang/vela"
homepage = "https://velalang.org"
documentation = "https://docs.velalang.org"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
vela-compiler = { path = "../compiler" }
lsp-server = "0.7"
lsp-types = "0.95"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }