[package]
name = "vela-reactive"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Vela Contributors"]
license = "MIT OR Apache-2.0"
description = "Reactive system primitives for Vela"
repository = "https://github.com/velalang/vela"
homepage = "https://velalang.github.io/vela/"
documentation = "https://docs.rs/vela-reactive"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "basic_reactive"
path = "examples/basic_reactive.rs"

[[bench]]
name = "reactive_bench"
harness = false