[package]
name = "vela-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime de ejecución para Vela"
license = "MIT OR Apache-2.0"

[dependencies]
# Paquetes independientes
concurrency = { path = "../packages/concurrency" }
http = { path = "../packages/http" }
reactive = { path = "../packages/reactive" }
events = { path = "../packages/events" }
di = { path = "../packages/di" }
state-management = { path = "../packages/state-management", package = "vela-state-management" }

# Dependencias restantes
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "runtime_bench"
harness = false