[package]
name = "vela-tooling"
version = "0.1.0"
edition = "2021"
authors = ["Vela Team"]
license = "MIT OR Apache-2.0"
description = "Vela language toolchain: CLI, build system, and package manager"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
semver = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rayon = "1.10"
sha2 = "0.10"
walkdir = "2.5"
tempfile = "3.10"

[dev-dependencies]
criterion = "0.5"
