[package]
name = "vela-tooling"
version = "0.1.0"
edition = "2021"
authors = ["Vela Team"]
license = "MIT OR Apache-2.0"
description = "Vela language toolchain: CLI, build system, and package manager"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
semver = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rayon = "1.10"
sha2 = "0.10"
walkdir = "2.5"
tempfile = "3.10"
bincode = "1.3"
vela-lsp = { path = "../packages/lsp" }
vela-compiler = { path = "../compiler" }
vela-vm = { path = "../vm" }

# AWS SDK for Lambda deployment
aws-config = "1.5"
aws-sdk-lambda = "1.37"
aws-sdk-iam = "1.37"
aws-sdk-s3 = "1.37"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
zip = "0.6"

[dev-dependencies]
criterion = "0.5"
