[package]
name = "vela-vm"
version = "0.1.0"
edition = "2021"
description = "VelaVM - bytecode interpreter and runtime"
authors = ["Vela Core Team <hello@velalang.org>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/velalang/vela"
homepage = "https://velalang.org"
documentation = "https://docs.velalang.org"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Collections
indexmap = { version = "2.0", features = ["serde"] }
smallvec = "1.11"

# Error handling
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }

# Hashing
ahash = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.10"

[features]
default = []
debug_execution = []
gc_debug = []
performance = ["debug_execution"]

# TODO: Uncomment when benchmark files are implemented
# [[bench]]
# name = "vm_bench"
# harness = false
#
# [[bench]]
# name = "gc_bench"
# harness = false