[package]
name = "vela-runtime-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop runtime for Vela applications"
license = "MIT OR Apache-2.0"

[lib]
name = "vela_runtime_desktop"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Runtime dependencies
reactive = { path = "../../packages/reactive" }
events = { path = "../../packages/events" }
di = { path = "../../packages/di" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Skia for graphics rendering
skia-safe = "0.68"

# System APIs
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
sysinfo = "0.30"
futures = "0.3"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[features]
default = []
windows = []
macos = []
linux = []

[[bin]]
name = "vela-desktop"
path = "src/main.rs"