[package]
name = "vela-ui"
version = "0.1.0"
edition = "2021"
description = "UI Framework for Vela - Declarative widgets with Virtual DOM"
license = "MIT OR Apache-2.0"

[dependencies]
vela-reactive = { path = "../../packages/reactive" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "Node",
  "HtmlElement",
  "HtmlDivElement",
  "EventTarget",
  "Event",
] }

[dev-dependencies]
tokio-test = "0.4"