[package]
name = "vela-prototypes"
version = "0.1.0"
edition = "2021"
authors = ["Vela Contributors"]
license = "MIT OR Apache-2.0"
description = "Phase 0 prototypes for Vela language - validation of architectural decisions"

[lib]
name = "vela_prototypes"
path = "lib.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[dependencies]
# No external dependencies - pure Rust validation

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lexer_bench"
harness = false
path = "benches/lexer_bench.rs"

[[bench]]
name = "parser_bench"
harness = false
path = "benches/parser_bench.rs"
